--- a/package.json
+++ b/package.json
@@ -32,31 +32,31 @@
     },
     "private": true,
     "devDependencies": {
-        "@aws-sdk/client-s3": "^3.80.0",
-        "@changesets/changelog-github": "^0.4.4",
-        "@changesets/cli": "^2.22.0",
-        "@nrwl/devkit": "14.1.1",
-        "@nrwl/eslint-plugin-nx": "14.1.1",
-        "@nrwl/linter": "14.1.1",
-        "@nrwl/nx-plugin": "14.1.1",
-        "@nrwl/workspace": "14.1.1",
+        "@aws-sdk/client-s3": "^3.161.0",
+        "@changesets/changelog-github": "^0.4.6",
+        "@changesets/cli": "^2.24.4",
+        "@nrwl/devkit": "^14.5.10",
+        "@nrwl/eslint-plugin-nx": "^14.5.10",
+        "@nrwl/linter": "^14.5.10",
+        "@nrwl/nx-plugin": "^14.5.10",
+        "@nrwl/workspace": "^14.5.10",
         "@types/js-yaml": "^4.0.5",
         "@types/node": "17.0.30",
-        "@typescript-eslint/eslint-plugin": "5.21.0",
-        "@typescript-eslint/parser": "5.21.0",
-        "dotenv": "16.0.0",
-        "esbuild": "^0.14.38",
-        "eslint": "8.14.0",
-        "eslint-config-prettier": "8.5.0",
+        "@typescript-eslint/eslint-plugin": "^5.36.1",
+        "@typescript-eslint/parser": "^5.36.1",
+        "dotenv": "^16.0.2",
+        "esbuild": "^0.15.6",
+        "eslint": "^8.23.0",
+        "eslint-config-prettier": "^8.5.0",
         "json": "^11.0.0",
-        "nx": "14.1.1",
-        "prettier": "2.6.2",
+        "nx": "^14.5.10",
+        "prettier": "^2.7.1",
         "ts-node": "~10.7.0",
         "tslib": "^2.4.0",
-        "typescript": "4.6.4",
-        "typescript-json-schema": "^0.53.0",
-        "vite": "^2.9.6",
-        "vitest": "^0.10.0"
+        "typescript": "^4.8.2",
+        "typescript-json-schema": "^0.53.1",
+        "vite": "^2.9.15",
+        "vitest": "^0.10.5"
     },
     "dependencies": {
         "execa": "^5.1.1"
