Switch from @nrwl/workspace:run-command to nx:run-command

--- a/apps/nx-vite-e2e/project.json
+++ b/apps/nx-vite-e2e/project.json
@@ -4,7 +4,7 @@
     "sourceRoot": "apps/nx-vite-e2e/src",
     "targets": {
         "e2e": {
-            "executor": "@nrwl/workspace:run-commands",
+            "executor": "nx:run-commands",
             "options": {
                 "commands": [
                     "npx nx run nx-vite:build",
