--- a/libs/typescript-project-references/project.json
+++ b/libs/typescript-project-references/project.json
@@ -10,10 +10,12 @@
                     "libs/typescript-project-references/**/*.ts"
                 ]
             },
-            "outputs": ["{options.outputFile}"]
+            "outputs": [
+                "{options.outputFile}"
+            ]
         },
         "test": {
-            "executor": "@nrwl/workspace:run-commands",
+            "executor": "nx:run-commands",
             "options": {
                 "command": "npx vitest --run",
                 "cwd": "libs/typescript-project-references"
