--- a/libs/nx-vite/project.json
+++ b/libs/nx-vite/project.json
@@ -6,9 +6,13 @@
         "lint": {
             "executor": "@nrwl/linter:eslint",
             "options": {
-                "lintFilePatterns": ["libs/nx-vite/**/*.ts"]
+                "lintFilePatterns": [
+                    "libs/nx-vite/**/*.ts"
+                ]
             },
-            "outputs": ["{options.outputFile}"]
+            "outputs": [
+                "{options.outputFile}"
+            ]
         },
         "test": {
             "executor": "@nrwl/workspace:run-commands",
@@ -18,7 +22,7 @@
             }
         },
         "build": {
-            "executor": "@nrwl/workspace:run-commands",
+            "executor": "nx:run-commands",
             "options": {
                 "commands": [
                     {
