pin pnpm to v6, upgrade node + pnpm in future

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Install pnpm
         run: |
-          npm i -g pnpm
+          npm i -g pnpm@6
           pnpm set verify-store-integrity false
 
       - name: pnpm install
