--- a/nx.json
+++ b/nx.json
@@ -16,14 +16,9 @@
     },
     "tasksRunnerOptions": {
         "default": {
-            "runner": "@nrwl/workspace/tasks-runners/default",
+            "runner": "@nx/workspace/tasks-runners/default",
             "options": {
-                "cacheableOperations": [
-                    "build",
-                    "lint",
-                    "test",
-                    "e2e"
-                ],
+                "cacheableOperations": ["build", "lint", "test", "e2e"],
                 "parallel": 1
             }
         }
@@ -31,9 +26,7 @@
     "$schema": "./node_modules/nx/schemas/nx-schema.json",
     "targetDefaults": {
         "build": {
-            "dependsOn": [
-                "^build"
-            ]
+            "dependsOn": ["^build"]
         }
     }
 }
