--- a/libs/nx-esbuild/package.json
+++ b/libs/nx-esbuild/package.json
@@ -12,7 +12,7 @@
         "execa": "^5.1.1"
     },
     "peerDependencies": {
-        "@nrwl/devkit": ">14.5.0",
+        "@nx/devkit": "^19.2.2",
         "dotenv": ">16.0.0",
         "esbuild": ">0.15.0",
         "nodemon": ">2.0.0"
