--- a/libs/typescript-project-references/project.json
+++ b/libs/typescript-project-references/project.json
@@ -4,15 +4,13 @@
     "projectType": "library",
     "targets": {
         "lint": {
-            "executor": "@nrwl/linter:eslint",
+            "executor": "@nx/eslint:lint",
             "options": {
                 "lintFilePatterns": [
                     "libs/typescript-project-references/**/*.ts"
                 ]
             },
-            "outputs": [
-                "{options.outputFile}"
-            ]
+            "outputs": ["{options.outputFile}"]
         },
         "test": {
             "executor": "nx:run-commands",
@@ -22,7 +20,7 @@
             }
         },
         "build": {
-            "executor": "@nrwl/workspace:run-commands",
+            "executor": "@nx/workspace:run-commands",
             "options": {
                 "commands": [
                     {
