--- a/libs/pulumi/package.json
+++ b/libs/pulumi/package.json
@@ -12,6 +12,6 @@
         "js-yaml": "^4.1.0"
     },
     "peerDependencies": {
-        "@nrwl/devkit": ">14.5.0"
+        "@nx/devkit": "^19.2.2"
     }
 }
