--- a/libs/pulumi/project.json
+++ b/libs/pulumi/project.json
@@ -1,4 +1,5 @@
 {
+    "name": "pulumi",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "libs/pulumi/src",
     "projectType": "library",
