--- a/apps/pulumi-e2e/project.json
+++ b/apps/pulumi-e2e/project.json
@@ -1,4 +1,5 @@
 {
+    "name": "pulumi-e2e",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
     "sourceRoot": "apps/pulumi-e2e/src",
