--- a/apps/typescript-project-references-e2e/project.json
+++ b/apps/typescript-project-references-e2e/project.json
@@ -1,4 +1,5 @@
 {
+    "name": "typescript-project-references-e2e",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "projectType": "application",
     "sourceRoot": "apps/typescript-project-references-e2e/src",
