--- a/libs/nx-esbuild/project.json
+++ b/libs/nx-esbuild/project.json
@@ -1,4 +1,5 @@
 {
+    "name": "nx-esbuild",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "libs/nx-esbuild/src",
     "projectType": "library",
