--- a/libs/nx-vite/project.json
+++ b/libs/nx-vite/project.json
@@ -19,7 +19,7 @@
             }
         },
         "build": {
-            "executor": "nx:run-commands",
+            "executor": "@nx/workspace:run-commands",
             "options": {
                 "commands": [
                     {
