--- a/libs/nx-esbuild/project.json
+++ b/libs/nx-esbuild/project.json
@@ -5,7 +5,7 @@
     "projectType": "library",
     "targets": {
         "lint": {
-            "executor": "@nx/linter:eslint",
+            "executor": "@nx/eslint:lint",
             "options": {
                 "lintFilePatterns": ["libs/nx-esbuild/**/*.ts"]
             },
@@ -18,7 +18,7 @@
             }
         },
         "build": {
-            "executor": "nx:run-commands",
+            "executor": "@nx/workspace:run-commands",
             "options": {
                 "commands": [
                     {
