--- a/apps/typescript-project-references-e2e/project.json
+++ b/apps/typescript-project-references-e2e/project.json
@@ -5,7 +5,7 @@
     "sourceRoot": "apps/typescript-project-references-e2e/src",
     "targets": {
         "e2e": {
-            "executor": "@nx/workspace:run-commands",
+            "executor": "nx:run-commands",
             "options": {
                 "commands": [
                     "npx nx run nx-esbuild:build",
