--- a/libs/pulumi/project.json
+++ b/libs/pulumi/project.json
@@ -12,14 +12,14 @@
             "outputs": ["{options.outputFile}"]
         },
         "test": {
-            "executor": "@nx/workspace:run-commands",
+            "executor": "nx:run-commands",
             "options": {
                 "command": "npx vitest --run --passWithNoTests",
                 "cwd": "libs/pulumi"
             }
         },
         "build": {
-            "executor": "@nx/workspace:run-commands",
+            "executor": "nx:run-commands",
             "options": {
                 "commands": [
                     {
