--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "esbuild": "^0.16.17",
         "eslint": "8.57.0",
         "eslint-config-prettier": "9.1.0",
+        "jest": "^29.7.0",
         "json": "^11.0.0",
         "nx": "19.2.2",
         "prettier": "2.7.1",
