--- a/libs/typescript-project-references/package.json
+++ b/libs/typescript-project-references/package.json
@@ -8,13 +8,13 @@
     "generators": "./generators.json",
     "executors": "./executors.json",
     "dependencies": {
-        "execa": "^5.1.1",
-        "tsup": "^8.1.0"
+        "execa": "^5.1.1"
     },
     "peerDependencies": {
         "@nx/devkit": "^19.2.2",
         "@nx/js": "^19.2.2",
         "@nx/workspace": "^19.2.2",
-        "nx": "^19.2.2"
+        "nx": "^19.2.2",
+        "tsup": "^8.1.0"
     }
 }
