EDIT-938: Update to Node 18, Typescript 5.4, @nrwl to @nx 19.2, Eslint 8.57 (#103)
* Updated root project dependencies to match all other wanews packages, including Typescript 5.4.5, Updating from NRWL to NX, Updating to EsLint 8.57.0

* Began package conversion from @nrwl/* to @nx/*

* Updated all remaining packages to accept new @nx workflow

* Updated tsup to match the remaining versions

* Ran nx fix-configuration

* nx format

* Fixed packages from not building

* Removed old unnecessary workspace-lint as the workspace.json has been removed

* Updated to utilise node 18

* Fixed issues with e2e test due to new nx commands

* Updated to include jest as a dev dependency

* Updated the nx-vite test to successfully pass e2e

* Cleaned up pulumi to pass the E2E test

* Fixed up the nx-esbuild e2e test

* Updated to utilise foldered (apps/libs) within the e2e tests

* Updated to utilise pnpm@9 and to make the set verify-store-integrity command it's own command in main.yml and pr.yml

* Changeset

* Final package version updates

* Updated pnpm lock file

* Updated version for main.yml checkout action

* Updated tsup to a peer dependency

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,16 +13,16 @@ jobs:
       changes: ${{ steps.version.outputs.changes }} # map step output to job output
     steps:
       - name: Checkout
-        uses: actions/checkout@main
+        uses: actions/checkout@v4
         with:
           # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
           fetch-depth: 0
           token: ${{ secrets.SERVICE_ACCOUNT_PAT }}
 
       - name: Enable node
-        uses: actions/setup-node@master
+        uses: actions/setup-node@v4
         with:
-          node-version: 14.x
+          node-version: 18
           registry-url: 'https://registry.npmjs.org'
           scope: '@wanews'
         env:
@@ -36,7 +36,9 @@ jobs:
 
       - name: Install pnpm
         run: |
-          npm i -g pnpm@6
+          npm i -g pnpm@9
+      - name: Set verify-store-integrity
+        run: |
           pnpm set verify-store-integrity false
 
       - name: pnpm install
