--- a/libs/typescript-project-references/project.json
+++ b/libs/typescript-project-references/project.json
@@ -1,18 +1,17 @@
 {
+    "name": "typescript-project-references",
     "$schema": "../../node_modules/nx/schemas/project-schema.json",
     "sourceRoot": "libs/typescript-project-references/src",
     "projectType": "library",
     "targets": {
         "lint": {
-            "executor": "@nrwl/linter:eslint",
+            "executor": "@nx/eslint:lint",
             "options": {
                 "lintFilePatterns": [
                     "libs/typescript-project-references/**/*.ts"
                 ]
             },
-            "outputs": [
-                "{options.outputFile}"
-            ]
+            "outputs": ["{options.outputFile}"]
         },
         "test": {
             "executor": "nx:run-commands",
@@ -22,7 +21,7 @@
             }
         },
         "build": {
-            "executor": "@nrwl/workspace:run-commands",
+            "executor": "nx:run-commands",
             "options": {
                 "commands": [
                     {
