--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "nx serve",
         "build": "nx run-many --target=build --all",
         "test": "nx run-many --target=test --all",
-        "lint": "nx workspace-lint && nx run-many --all --target=lint",
+        "lint": "nx run-many --target=lint --all",
         "e2e": "nx run-many --target=e2e --all",
         "affected:apps": "nx affected:apps",
         "affected:libs": "nx affected:libs",
@@ -35,28 +35,29 @@
         "@aws-sdk/client-s3": "^3.160.0",
         "@changesets/changelog-github": "^0.4.6",
         "@changesets/cli": "^2.24.4",
-        "@nrwl/devkit": "14.7.13",
-        "@nrwl/eslint-plugin-nx": "14.7.13",
-        "@nrwl/linter": "14.7.13",
-        "@nrwl/nx-plugin": "14.7.13",
-        "@nrwl/workspace": "14.7.13",
+        "@nx/devkit": "^19.2.2",
+        "@nx/eslint": "^19.2.2",
+        "@nx/eslint-plugin": "^19.2.2",
+        "@nx/plugin": "^19.2.2",
+        "@nx/workspace": "^19.2.2",
         "@swc-node/register": "^1.5.1",
         "@swc/core": "^1.2.245",
         "@types/js-yaml": "^4.0.5",
         "@types/node": "18.7.14",
-        "@typescript-eslint/eslint-plugin": "5.33.1",
-        "@typescript-eslint/parser": "5.33.1",
+        "@typescript-eslint/eslint-plugin": "7.12.0",
+        "@typescript-eslint/parser": "7.12.0",
         "dotenv": "16.0.1",
-        "esbuild": "^0.15.6",
-        "eslint": "8.23.0",
-        "eslint-config-prettier": "8.5.0",
+        "esbuild": "^0.16.17",
+        "eslint": "8.57.0",
+        "eslint-config-prettier": "9.1.0",
+        "jest": "^29.7.0",
         "json": "^11.0.0",
-        "nx": "14.7.13",
+        "nx": "19.2.2",
         "prettier": "2.7.1",
         "ts-node": "~10.9.1",
-        "tslib": "^2.4.0",
-        "typescript": "4.8.2",
-        "typescript-json-schema": "^0.54.0",
+        "tslib": "^2.6.3",
+        "typescript": "5.4.5",
+        "typescript-json-schema": "^0.63.0",
         "vite": "^3.0.9",
         "vitest": "^0.22.1"
     },
