--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
     },
     "private": true,
     "devDependencies": {
-        "@aws-sdk/client-s3": "^3.160.0",
-        "@changesets/changelog-github": "^0.4.6",
-        "@changesets/cli": "^2.24.4",
-        "@nx/devkit": "^19.2.2",
-        "@nx/eslint": "^19.2.2",
-        "@nx/eslint-plugin": "^19.2.2",
-        "@nx/plugin": "^19.2.2",
-        "@nx/workspace": "^19.2.2",
-        "@swc-node/register": "^1.5.1",
-        "@swc/core": "^1.2.245",
-        "@types/js-yaml": "^4.0.5",
+        "@aws-sdk/client-s3": "^3.609.0",
+        "@changesets/changelog-github": "^0.4.8",
+        "@changesets/cli": "^2.27.7",
+        "@nx/devkit": "^19.4.1",
+        "@nx/eslint": "^19.4.1",
+        "@nx/eslint-plugin": "^19.4.1",
+        "@nx/plugin": "^19.4.1",
+        "@nx/workspace": "^19.4.1",
+        "@swc-node/register": "^1.10.2",
+        "@swc/core": "^1.6.13",
+        "@types/js-yaml": "^4.0.9",
         "@types/node": "18.7.14",
         "@typescript-eslint/eslint-plugin": "7.12.0",
         "@typescript-eslint/parser": "7.12.0",
@@ -54,14 +54,15 @@
         "json": "^11.0.0",
         "nx": "19.2.2",
         "prettier": "2.7.1",
-        "ts-node": "~10.9.1",
+        "ts-node": "~10.9.2",
         "tslib": "^2.6.3",
         "typescript": "5.4.5",
         "typescript-json-schema": "^0.63.0",
-        "vite": "^3.0.9",
-        "vitest": "^0.22.1"
+        "vite": "^3.2.10",
+        "vitest": "^1.6.0"
     },
     "dependencies": {
         "execa": "^5.1.1"
-    }
+    },
+    "packageManager": "pnpm@9.4.0+sha512.f549b8a52c9d2b8536762f99c0722205efc5af913e77835dbccc3b0b0b2ca9e7dc8022b78062c17291c48e88749c70ce88eb5a74f1fa8c4bf5e18bb46c8bd83a"
 }
