More dependency updates, and fixed e2e errors failing

--- a/apps/nx-vite-e2e/project.json
+++ b/apps/nx-vite-e2e/project.json
@@ -9,7 +9,7 @@
             "options": {
                 "commands": [
                     "npx nx run nx-vite:build",
-                    "npx vitest --run --config apps/nx-vite-e2e/vitest.config.ts"
+                    "VITE_CJS_IGNORE_WARNING=true npx vitest --run --config apps/nx-vite-e2e/vitest.config.ts"
                 ],
                 "parallel": false
             }
