--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,7 +8,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "importHelpers": true,
-        "target": "es2015",
+        "target": "esnext",
         "module": "commonjs",
         "lib": ["es2017", "dom"],
         "skipLibCheck": true,
